--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.23.0",
     "isbot": "^5.1.27",
     "lucide-react": "^0.517.0",
     "react": "^19.1.0",
@@ -36,6 +37,7 @@
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.58.1",
     "react-router": "^7.5.3",
+    "recharts": "^3.0.2",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
     "zod": "^3.25.67"
