--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "framer-motion": "^12.23.0",
     "isbot": "^5.1.27",
     "lucide-react": "^0.517.0",
+    "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-day-picker": "^9.7.0",
     "react-dom": "^19.1.0",
