--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.0",
     "morgan": "^1.10.0",
+    "multer": "^2.0.1",
     "zod": "^3.25.67",
     "zod-express-middleware": "^1.4.0"
   },
